--- a/ToolkitConsole/ToolkitConsole.csproj
+++ b/ToolkitConsole/ToolkitConsole.csproj
@@ -17,4 +17,16 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DetectorLoop\" />
+    <Folder Include="SimuladorAFD\" />
+    <Folder Include="ReconheciveisNaoTermina\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ProblemaXInstancia\ProblemaXInstancia.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
